fix teams page overflow

--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -338,12 +338,13 @@ article:hover {
   width: 100%;
   background: #EEEEEE;
   height: 100vh;
+  overflow: auto;
 }
 
 .team-matches{
   filter: drop-shadow(0px 2px 4px rgba(194, 199, 207, 0.24));
   max-width: 1400px;
-  margin: auto;
+  margin: auto auto 4rem auto;
   display: flex;
   flex-direction: row;
   gap: 20px;
